fix header too large before css loads

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -11,6 +11,7 @@
   width: 100%;
   z-index: 9;
   min-height: 73px;
+  max-height: 73px;
 }
 
 .gg-header > * {
